           password replacement on the client side.
20171208 - Added $CUSTOMCSS which allows for type specific custom CSS
20171217 - Added the ability for dynamic date based unlocking (based on the
           date that an item appears on the calendar impacted by some delta)
           Format in the access files is:
           class_1 -2
           The above would set the class to appear 2 days prior to the event
20171223 - BUG FIX: Safeguards in place to ensure calendar doesn't break if
           the access file is formated wrong with the new +/- support
20171223 - Added +/-sunday (or any other day of week)
20180106 - Added <showlink src=""> tag to provide link for curl usage
         - Modified access protocols, so last day_of_week will
           not change the day (from day of calendar) if you say last monday
           and it is currently already on a monday. Next day of week
           will always unlock it later on the calendar.
20180121 - BUG FIX: Safeguards were removing shared files based on other
           days on the calendar, preventing access.  Modified the way the
           security protocol works with dynamic unlocking for files within
           the same day.
20180207 - Version 4.1 - Rewrite of security engine to handle generic events
           case as well as the "other" files of the day system.  This
           modification ensures that the system handles the priorities
           correctly, system priorities for access file are (in decreasing
           priority):
              class_01/filename
              filename
              class_01/category [such as homework]
              class/category
              class_01
              class/*
              class_01/all
              class_01/*
              */category
              class
              *
20180227 - BUG FIX: Scripts now work on older version of PHP (ext web)
20180228 - An empty ADMIN password will now prevent logon
20180309 - Upgraded jquery to 3.3.1